# Py-Boost

./: .gitignore  LICENSE  README.md  build_package.sh  pyproject.toml
py_boost/: __init__.py
py_boost/callbacks/: advanced_es.py  callback.py
py_boost/cv/: __init__.py  adaptive_es.py  base.py  cluster_tree.py
py_boost/gpu/: __init__.py  base.py  boosting.py  cluster_tree.py  cv.py  inference.py  serialization.py  sketch_boost.py  tree.py  utils.py
py_boost/gpu/losses/: __init__.py  losses.py  metrics.py  multiclass_metrics.py
py_boost/multioutput/: __init__.py  sketching.py  target_splitter.py
py_boost/quantization/: __init__.py  base.py  utils.py
py_boost/sampling/: __init__.py  bagging.py
py_boost/utils/: __init__.py  logging.py  onnx_wrapper.py  quantization.py  tl_wrapper.py
tests/: main_test.py
tutorials/: Experimets2.ipynb  Tutorial_1_Basics.ipynb  Tutorial_2_Advanced_multioutput.ipynb  Tutorial_3_Custom_features.ipynb  Tutorial_4_Handle_null_targets.ipynb  Tutorial_5_ONNX_inference.ipynb  Tutorial_ClusterTree.ipynb
