[tool.poetry]
name = "Py-Boost"
version = "0.4.3"
description = "Python based GBDT"

authors = ["Vakhrushev Anton <btbpanda@gmail.com>",
           "Iosipoi Leonid",
           "Sergey Kupriyanov"]
           
readme = "README.md"

repository = "https://github.com/AILab-MLTools/Py-Boost"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

]

[tool.poetry.dependencies]

python = ">=3.7, <3.11"

scikit-learn = ">=1"
numpy = "*"
joblib = "*"
numba = "*"

pandas = ">=1"
treelite = [
    {version = "<3.2,>=3", python = "<3.8"},
    {version = "^3", python = ">=3.8"}
]
treelite_runtime = [
    {version = "<3.2,>=3", python = "<3.8"},
    {version = "^3", python = ">=3.8"}
]
tqdm = ">=4.64.1"

importlib-metadata = {version = "^1.0", python = "<3.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"