[tool.poetry]
name = "Py-Boost"
version = "0.5.1"
description = "Python based GBDT"

authors = [
    "Vakhrushev Anton <btbpanda@gmail.com>",
    "Iosipoi Leonid",
    "Sergey Kupriyanov"
]

readme = "README.md"

repository = "https://github.com/sb-ai-lab/Py-Boost"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]

python = ">=3.8, <3.12"

scikit-learn = ">=1"
numpy = "*"
joblib = "*"
numba = "*"
ujson = '*'

pandas = ">=1"
onnx = ">=1.16, <2"
onnxruntime = ">=1.16, <2"
treelite = "^3"
treelite_runtime = "^3"

tqdm = ">=4.64.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"